[tool.poetry]
name = "blackjack"
version = "0.1.0"
description = ""
authors = ["markhaakman2001 <135602514+markhaakman2001@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"

[tool.poetry.scripts]
blackjack = "blackjack.table:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
