[tool.poetry]
name = "blackjack"
version = "0.1.0"
description = ""
authors = ["markhaakman2001 <135602514+markhaakman2001@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.1.3"
pyside6 = "^6.8.0.2"
pyqtgraph = "^0.13.7"
shiboken6 = "^6.7.2"

[tool.poetry.scripts]
blackjack = "src.blackjack.table:main"
gui = "src.blackjack.gui:main"
play = "src.blackjack.gui_table:main"
slot = "src.SlotMachine.slot_generator:main"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
