[project]
name = "blackjack"
version = "0.1.0"
description = ""
authors = [
    {name = "markhaakman2001",email = "135602514+markhaakman2001@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pyside6 (>=6.10.0,<7.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]
[tool.poetry.scripts]
bjtest = "BLACKJACKTESTS:UItests"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
